# dos-dev-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug-test.sh  download-tools.sh
.github/: FUNDING.yml
assets/: test.txt
doc/examples/: debugger.c  keyboard.c
examples/: debugger-sim.js  debugger.c  keyboard.c
src/: gdb.h  gdbstub.h  main.c  main.cpp  serial.c  serial.h  timer.c
tools/: dosbox-x.conf  toolchain-djgpp.cmake
